--- a/Flex/Info.plist
+++ b/Flex/Info.plist
@@ -39,5 +39,25 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>197321650958674</key>
+    <string>0123456789012345</string>
+    <key>Flex</key>
+    <string>Flex</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb0123456789012345</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
